[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://sprites/dandelion-flower.png" type="Texture" id=3]
[ext_resource path="res://fonts/Symtext.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/CardOneName.gd" type="Script" id=5]
[ext_resource path="res://scripts/CardTwoName.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 514.177, 520.628 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 4 )

[node name="GameManger" type="Node2D"]
position = Vector2( 90, 0 )
script = ExtResource( 1 )

[node name="Card1" type="Area2D" parent="."]
position = Vector2( 520.478, 246.807 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Card1"]
position = Vector2( -269.574, -392.64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_rect = Rect2( 0, 0, 10, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card1"]
position = Vector2( 240.272, 123.066 )
shape = SubResource( 1 )

[node name="Card2" type="Area2D" parent="."]
position = Vector2( 1267.67, 396.92 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Card2"]
position = Vector2( -714.956, -345.757 )
scale = Vector2( 2.00724, 2.00724 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card2"]
position = Vector2( -720.816, -351.617 )
shape = SubResource( 1 )

[node name="Card3" type="Area2D" parent="."]
position = Vector2( 1267.67, 576.92 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Card3"]
position = Vector2( -2256.21, 269.573 )
scale = Vector2( 1.89278, 1.89278 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card3"]
position = Vector2( -2256.21, 275.434 )
shape = SubResource( 1 )

[node name="Card4" type="Area2D" parent="."]
position = Vector2( 1267.67, 756.92 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Card4"]
position = Vector2( -659.283, -295.945 )
scale = Vector2( 1.9729, 1.9729 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card4"]
position = Vector2( -673.933, -293.014 )
shape = SubResource( 1 )

[node name="CardOneName" type="RichTextLabel" parent="."]
margin_left = 320.0
margin_top = 880.0
margin_right = 620.0
margin_bottom = 938.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "Card 1 : Name"
script = ExtResource( 5 )

[node name="CardTwoName" type="RichTextLabel" parent="."]
margin_left = 1040.0
margin_top = 880.0
margin_right = 1340.0
margin_bottom = 938.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "Card 1 : Name"
script = ExtResource( 6 )

[node name="CheckBox" type="RichTextLabel" parent="."]
margin_left = 940.0
margin_top = 880.0
margin_right = 986.0
margin_bottom = 938.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "?"

[node name="NumberOfMatches" type="RichTextLabel" parent="."]
margin_left = 320.0
margin_top = 1000.0
margin_right = 745.0
margin_bottom = 1058.0
custom_fonts/normal_font = SubResource( 2 )
text = "Number of Matches: 0"

[node name="BackToMenuButton" type="Button" parent="."]
margin_left = 5.0
margin_top = 911.0
margin_right = 249.0
margin_bottom = 1011.0
custom_fonts/font = SubResource( 3 )
text = "Back to Menu"
[connection signal="button_down" from="BackToMenuButton" to="." method="_on_BackToMenuButton_button_down"]
